corrected + z-index

--- a/Polina/style.css
+++ b/Polina/style.css
@@ -1,34 +1,53 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-size: auto;
-    background-color: #D0DB6E;
-  }
-/* img {
-  display: block;
-  width: 300px;
-  margin-left: 600px;
-  
-} */
-/* #colorBlock {
-    background-color: #9FBFC1;
-    width: 500px;
-    height: 900px;
-    padding-top: 0px;
-    padding-right: 0px;
-  }  */
- 
+  background-size: auto;
+  background-color: #d0db6e;
+}
+img {
+  position: absolute;
+  display: flex;
+  width: 867px;
+  left: 783px;
+  top: 0px;
+  border-radius: 0 0 110px 110px;
+  z-index: 3;
+}
+#colorBlock {
+  position: absolute;
+  background-color: #9fbfc1;
+  width: 864px;
+  height: 1117px;
+  top: 0px;
+  left: 864px;
+  z-index: 2;
+}
+.ic {
+  height: 38px;
+  width: 38px;
+}
+.icons {
+  display: flex;
+  height: 39px;
+  width: 134px;
+  justify-content: space-between;
+  align-items: center;
+}
 .menu {
+  position: relative;
+  margin-top: 78px;
+  margin-left: 100px;
+  z-index: 4;
   display: flex;
   height: 39px;
   width: 1508px;
   justify-content: space-between;
   align-items: center;
-  margin-top: 78px;
-  margin-right: 120px;
-}  
+}
 
 ul {
   list-style: none;
@@ -36,69 +55,67 @@ ul {
   justify-content: space-between;
   height: 23px;
   width: 811px;
-  margin-top: 78px;
-  margin-left: 65px;
 }
 
-h3 {font-family: "Gilroy",normal;
-    font-size: 20px;
-    color: #332F2F;
-    font-weight: 400;
-    margin: 0 0 0 0;
-  }
-  
+h3 {
+  font-family: "Gilroy", normal;
+  font-size: 20px;
+  color: #332f2f;
+  font-weight: 400;
+}
+
 .name {
   display: flex;
   flex-direction: column;
   width: 467px;
-  height: 242px;
+  height: 300px;
   align-items: flex-start;
   margin-left: 100px;
   margin-top: 108px;
 }
 
-h1 {font-family: "Felix Titling", normal;
-    font-size: 128px;
-    color: #954D4D;
-    font-weight: 100;
-    margin: 0 0 0 0;
-  }
+h1 {
+  font-family: "Felix Titling", normal;
+  font-size: 128px;
+  color: #954d4d;
+  font-weight: 100;
+}
 
 .container {
   display: flex;
   width: 593px;
   height: 78px;
-  margin-top: 86px;
+  margin-top: 36px;
   margin-left: 100px;
-  }
+}
 
 h4 {
-  font-family: "Gilroy",normal;
+  font-family: "Gilroy", normal;
   font-size: 20px;
-  color: #332F2F;
-  font-weight: 400; 
+  color: #332f2f;
+  font-weight: 400;
   line-height: 125%;
-  margin: 0 0 0 0; 
-  }
+}
 
-.Кнопка {
+Button {
   display: flex;
   background-color: white;
   height: 78px;
   width: 250px;
   border-radius: 64px;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
   justify-content: center;
   align-items: center;
   margin-left: 100px;
   margin-top: 114px;
 }
 h2 {
-  font-family: "Gilroy",normal;
+  font-family: "Gilroy", normal;
   font-size: 24px;
-  color: #954D4D;
-  font-weight: 400; 
-  margin: 0 0 0 0; 
+  color: #954d4d;
+  font-weight: 400;
+  margin: 0;
 }
-  
-
-  
